# furnace

./: .env.example  .gitignore  Cargo.toml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.agents/skills/testing-session-ui/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_auth_multitenancy.py
apps/web/: README.md  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AppHeader.tsx  AuthProvider.tsx  RequireAuth.tsx  StatusBadge.tsx
apps/web/hooks/: useSessionEvents.ts
apps/web/lib/: api.ts  auth.ts
apps/worker/: __init__.py  __main__.py  client.py  daemon.py  ios_tools.py  protocol.py  workspace.py
docs/: architecture.md  implementation-lld.md  worker-daemon-plan.md
furnace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/golden-image/: 01-setup-host.sh  02-setup-guest.sh  README.md
services/: README.md  __init__.py  app.py  config.py  main.py
services/agent/: __init__.py  base.py  fake.py  llm.py
services/api/: routes.py  schemas.py
services/auth/: __init__.py  dependencies.py  jwt.py  password.py
services/db/: __init__.py  migrate.py  models.py  session.py
services/github/: __init__.py  client.py  service.py  state.py  webhooks.py
services/llm/: __init__.py  policy.py  router.py
services/scheduler/: pool.py
services/scheduler/provisioner/: __init__.py  aws.py  base.py  ec2_tart.py  fake.py  local.py  orka.py
services/sessions/: __init__.py  orchestrator.py  pubsub.py  state_machine.py
services/vault/: __init__.py  key_vault.py
spike/: README.md  run_spike.sh
spike/SampleApp/: project.yml
src/core/: tensor.rs
tests/: auth_helpers.py  conftest.py  test_agent_runner.py  test_auth_routes.py  test_byok_router.py  test_ec2_tart_provisioner.py  test_end_to_end.py  test_fake_provisioner.py  test_github_flow.py  test_llm_agent_runner.py  test_pool_controller.py  test_state_machine.py  test_ui_backend.py  test_worker_daemon.py  test_ws_auth.py
(+6 files in other folders)
