[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "furnace"
version = "0.1.0"
description = "Raven control-plane skeleton"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "pyjwt>=2.9",
  "cryptography>=43",
  "litellm>=1.50",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<10",
  "pytest-asyncio>=0.23,<2",
  "ruff>=0.6.9,<0.7",
  "mypy>=1.11,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
